2007-04-24  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13453
          Control clip isn't applied to children's backgrounds, outlines and floats

        * fast/forms/control-clip-expected.checksum: Added.
        * fast/forms/control-clip-expected.png: Added.
        * fast/forms/control-clip-expected.txt: Added.
        * fast/forms/control-clip.html: Added.

2007-04-23  Geoffrey Garen  <ggaren@apple.com>

        Rubber Stamped by Mark Rowe.
        
        Disabling this test because it hangs all the time.
        (http://bugs.webkit.org/show_bug.cgi?id=13370)

        * http/tests/plugins/npapi-response-headers.html: Removed.

2007-04-23  Beth Dakin  <bdakin@apple.com>

        Reviewed by Adam.

        Test for <rdar://problem/5155507> REGRESSION: Crash in 
        RenderLayer::setHasVisibleContent()

        * fast/css-generated-content/visibleContentHiddenParent-expected.checksum: Added.
        * fast/css-generated-content/visibleContentHiddenParent-expected.png: Added.
        * fast/css-generated-content/visibleContentHiddenParent-expected.txt: Added.
        * fast/css-generated-content/visibleContentHiddenParent.html: Added.

2007-04-23  Adele Peterson  <adele@apple.com>

        Reviewed by Adam.

        Updating test from last checkin to include test case for select with and without a form element.

        * fast/events/onchange-select-popup-expected.txt:
        * fast/events/onchange-select-popup.html:

2007-04-23  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt & Adam.

        Tests for <rdar://problem/4807799> REGRESSION: calling select() in onSearch handler doesn't work if you hit enter to trigger the event
              and <rdar://problem/5153970> onChange doesn't fire when focusing a popup, using type-ahead to select, and leaving

        * fast/events/onchange-passwordfield-expected.txt:
        * fast/events/onchange-passwordfield.html: