@@ -21,28 +21,28 @@
 module html {
 
     interface [LegacyParent=JSHTMLInputElementBase, GenerateConstructor] HTMLInputElement : HTMLElement {
-                 attribute DOMString       defaultValue;
+                 attribute [ConvertNullToNullString] DOMString defaultValue;
                  attribute boolean         defaultChecked;
         readonly attribute HTMLFormElement form;
-                 attribute DOMString       accept;
-                 attribute DOMString       accessKey;
-                 attribute DOMString       align;
-                 attribute DOMString       alt;
+                 attribute [ConvertNullToNullString] DOMString accept;
+                 attribute [ConvertNullToNullString] DOMString accessKey;
+                 attribute [ConvertNullToNullString] DOMString align;
+                 attribute [ConvertNullToNullString] DOMString alt;
                  attribute boolean         checked;
                  attribute boolean         disabled;
                  attribute long            maxLength;
-                 attribute DOMString       name;
+                 attribute [ConvertNullToNullString] DOMString name;
                  attribute boolean         readOnly;
 #if defined(LANGUAGE_OBJECTIVE_C)
                  attribute [ConvertToString] DOMString size; // DOM level 2 changed this to a long, but our existing API is a string
 #else
                  attribute unsigned long   size; // Changed string -> long as part of DOM level 2
 #endif
-                 attribute DOMString       src;
+                 attribute [ConvertNullToNullString] DOMString src;
                  attribute long            tabIndex;
                  attribute DOMString       type; // readonly dropped as part of DOM level 2
-                 attribute DOMString       useMap;
-                 attribute DOMString       value;
+                 attribute [ConvertNullToNullString] DOMString useMap;
+                 attribute [ConvertNullToNullString] DOMString value;
         
         void               blur();
         void               focus();
