@@ -1,3 +1,13 @@
+2007-04-24  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Mitz.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=13448
+          REGRESSION: setting an input element's value to JavaScript null gives "null"
+
+        * fast/forms/input-null-expected.txt: Added.
+        * fast/forms/input-null.html: Added.
+
 2007-04-24  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Dave Hyatt.
